Oops forgot to reference JS correctly as well as add the required  js for foundation framework.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	  <link rel="stylesheet" href="css/app.css">
 	  <link rel="stylesheet" href="css/style.css">
 
-	  <script src="javascripts/modernizr.foundation.js"></script>
+	  <script src="js/modernizr.foundation.js"></script>
 	</head>
 	<body>
 
